spacing improvement and bug removal

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ nav {
     margin-right: 4%;
     margin-top: 0.7%;
     justify-self: center;
-    width: 90%;
+    
     height: fit-content;
     background-color: lightblue;
     border-radius: 200px;
@@ -127,19 +127,25 @@ nav ul li{
     margin-top: 5%;
 }
 body {
-    background-image: linear-gradient(100deg, #ACE1AF,  	#E5E4E2);
+    background-image: linear-gradient(to right, #ACE1AF,  	#E5E4E2);
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    width: 100%;
+
 }
-p, h3, ol, ul {
+
+p {
+    margin-right: 10%;
+
+}
+
+ol, ul {
     margin-left: 10%;
-    margin-right: 20%;
+    padding-bottom: 2%;
 }
+
 h1, h2, h3 {
-    margin-top: 4%;
+
     margin-bottom: 4%;
     padding-top: 2%;
     padding-bottom: 2%;
@@ -195,7 +201,7 @@ footer ul {
 }
 footer {
     margin-left: 0;
-    padding-right: 1%;
+    
     padding-top: 2.5%;
     padding-bottom: 0;
     margin-bottom: 0;
@@ -206,6 +212,7 @@ footer {
 }
 #frontend-page-footer {
     margin-top: 3%;
+
 }
 footer ul li {
     color: #002244;
